# tgester

./: .gitignore  LICENCE  README.md  pyproject.toml
inst/: config.example.yaml  example.env  install_service.sh  tgester.service.template  tgester.timer
scripts/: deploy.sh
src/tgester/: __init__.py  cli.py  config.py  llm.py  tg.py
