[project]
name = "tgester"
version = "0.1.0"
description = "Telegram news digester"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chatlas[anthropic]>=0.11",
    "isodate>=0.7.2",
    "markdown>=3.9",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "shiny>=1.4.0",
    "telegraph>=2.2.0",
    "telethon>=1.40.0",
    "typer>=0.17.3",
]
license = {text = "WTFPL"}
authors = [
    {name = "Dmitry Zotikov", email = "dmitry.zotikov@ungrund.org"}
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
tgester = "tgester.cli:app"